@@ -6,6 +6,7 @@
 #      21-Jul-2019 jdw update to Py38
 #      10-Mar-2020 jdw py38 only
 #      10-Dec-2020 jdw py39 only
+#      16-Oct-2024 dwp py310 only
 #
 name: $(BuildDefinitionName)_$(Date:yyyyMMdd)$(Rev:.rr)
 
@@ -26,20 +27,18 @@ schedules:
 
 jobs:
   - template: azure-template-tox-job.yml
-    parameters: { tox: "format_pep8", python: "3.9", os: "linux" }
+    parameters: { tox: "format_pep8", python: "3.10", os: "linux" }
   - template: azure-template-tox-job.yml
-    parameters: { tox: "lint_pylint", python: "3.9", os: "linux" }
+    parameters: { tox: "lint_pylint", python: "3.10", os: "linux" }
   - template: azure-template-tox-job.yml
-    parameters: { tox: "test_coverage", python: "3.9", os: "linux" }
+    parameters: { tox: "test_coverage", python: "3.10", os: "linux" }
     #
   - template: azure-template-tox-job.yml
-    parameters: { tox: "py39", python: "3.9", os: "linux" }
+    parameters: { tox: "py310", python: "3.10", os: "linux" }
   #
   - template: azure-template-tox-job.yml
-    parameters: { tox: "py39", python: "3.9", os: "macos" }
+    parameters: { tox: "py310", python: "3.10", os: "macos" }
   #
-  #- template: azure-template-publish-job.yml
-  #  parameters: {tox: 'py39', python: '3.9', os: 'macos'}
   - template: azure-template-publish-job.yml
-    parameters: { tox: "py39", python: "3.9", os: "linux" }
+    parameters: { tox: "py310", python: "3.10", os: "linux" }
   #
