@@ -33,7 +33,7 @@ coverage_cutoff = 50
 ##
 [tox]
 # The complete list of supported test environments to setup and invoke
-envlist = format_pep8-{py39}, lint_pylint-{py39}, format_black-{py39}, py{39}, test_coverage-{py39}
+envlist = format_pep8-{py310}, lint_pylint-{py310}, format_black-{py310}, py{310}, test_coverage-{py310}
 #
 minversion = 3.7.0
 skip_missing_interpreters = true
@@ -42,11 +42,11 @@ skipsdist = True
 [testenv]
 passenv = CONFIG_SUPPORT_TOKEN_ENV,OE_LICENSE
 allowlist_externals = echo
-basepython = py39: python3.9
+basepython = py310: python3.10
 commands =
     echo "Starting default tests in testenv"
 
-[testenv:py39]
+[testenv:py310]
 description = 'Run unit tests (unittest runner) using {envpython}'
 platform=
     macos: darwin
@@ -68,7 +68,7 @@ commands =
     echo "Completed {envname} with {envpython}"
 
 #
-[testenv:format_pep8-py39]
+[testenv:format_pep8-py310]
 description = 'Run selected PEP8 compliance checks (flake8)'
 platform=
        macos: darwin
@@ -86,7 +86,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:lint_pylint-py39]
+[testenv:lint_pylint-py310]
 description = 'Run linting compliance checks (pylint)'
 platform=
        macos: darwin
@@ -100,7 +100,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_black-py39]
+[testenv:format_black-py310]
 description = 'Run format compliance checks (black)'
 platform=
        macos: darwin
@@ -116,7 +116,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:test_coverage-py39]
+[testenv:test_coverage-py310]
 description = 'Run test coverage analysis'
 platform=
        macos: darwin
